Added additional tables import

--- a/update_kladr.config
+++ b/update_kladr.config
@@ -1,47 +1,86 @@
+#Created by ElizaZu
+
+#KLADR import configuration
+
+#Destination encoding
 dest_encoding=utf-8
+
+#URL for downloading KLADR sources
 url=https://www.gnivc.ru/html/gnivcsoft/KLADR/Base.7z
+
+#Database server
 host=127.0.0.1
+
+#Database user
 user=kladruser
+
+#User's password
 password=kladrpassword
-database=kladrbase
 
+#Database name
+database=kladr
+
+#List of KLADR tables in export archive
 tables=(KLADR STREET DOMA FLAT ALTNAMES NAMEMAP SOCRBASE)
-tables_aliases=(kladr streets doma flat altnames namemap socrbase)
 
-#NAME,SOCR,CODE,INDEX,GNINMB,UNO,OCATD,STATUS
+#Names of tables in database. Mark table with skip if you don't wont to import it
+tables_aliases=(kladr streets doma skip altnames namemap socrbase)
 
+#Create tables structures. Rewrite this queries if you have other structures
+#Table with flats is empty. It is normal! But KLADR authors wrote that flats table can be filled in future.
 create_tables=(
 "CREATE TABLE IF NOT EXISTS kladr (
   name varchar(40) NOT NULL,
   socr varchar(10) NOT NULL,
   code char(13) NOT NULL PRIMARY KEY,
-  zipcode char(6) DEFAULT NULL,
-  ifnscode varchar(4) DEFAULT NULL,
-  ifnstercode varchar(4) DEFAULT NULL,
-  okatocode varchar(11) DEFAULT NULL,
+  \`index\` char(6) DEFAULT NULL,
+  gninmb varchar(4) DEFAULT NULL,
+  uno varchar(4) DEFAULT NULL,
+  okatd varchar(11) DEFAULT NULL,
   status int(1) DEFAULT NULL
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8"
 "CREATE TABLE IF NOT EXISTS streets (
   name varchar(40) NOT NULL,
   socr varchar(10) NOT NULL,
   code char(17) NOT NULL PRIMARY KEY,
-  zipcode char(6) DEFAULT NULL,
-  ifnscode varchar(4) DEFAULT NULL,
-  ifnstercode varchar(4) DEFAULT NULL,
-  okatocode varchar(11) DEFAULT NULL
+  \`index\` char(6) DEFAULT NULL,
+  gninmb varchar(4) DEFAULT NULL,
+  uno varchar(4) DEFAULT NULL,
+  okatd varchar(11) DEFAULT NULL
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8"
 "CREATE TABLE IF NOT EXISTS doma (
-  name varchar(40) DEFAULT NULL,
+  name varchar(40) NOT NULL,
   korp varchar(10) DEFAULT NULL,
   socr varchar(10) DEFAULT NULL,
-  code varchar(19) DEFAULT NULL,
-  zipcode varchar(6) DEFAULT NULL,
-  ifnscode varchar(4) DEFAULT NULL,
-  ifnstercode varchar(4) DEFAULT NULL,
-  okatocode varchar(11) DEFAULT NULL
+  code varchar(19) NOT NULL PRIMARY KEY,
+  \`index\` char(6) DEFAULT NULL,
+  gninmb varchar(4) DEFAULT NULL,
+  uno varchar(4) DEFAULT NULL,
+  okatd varchar(11) DEFAULT NULL
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8"
-" "
-" "
-" "
-" "
+"CREATE TABLE IF NOT EXISTS flat (
+  name varchar(40) NOT NULL,
+  code varchar(23) NOT NULL,
+  \`index\` char(6) DEFAULT NULL,
+  gninmb varchar(4) DEFAULT NULL,
+  uno varchar(4) DEFAULT NULL,
+  np varchar(4) DEFAULT NULL
+) ENGINE=InnoDB DEFAULT CHARSET=utf8"
+"CREATE TABLE IF NOT EXISTS altnames (
+  oldcode varchar(19) NOT NULL,
+  newcode varchar(19) NOT NULL,
+  level varchar(1) DEFAULT NULL
+) ENGINE=InnoDB DEFAULT CHARSET=utf8"
+"CREATE TABLE IF NOT EXISTS namemap (
+  code varchar(19) NOT NULL,
+  name varchar(40) NOT NULL,
+  shname varchar(40) NOT NULL,
+  scname varchar(40) NOT NULL
+) ENGINE=InnoDB DEFAULT CHARSET=utf8"
+"CREATE TABLE IF NOT EXISTS socrbase (
+  level varchar(5) NOT NULL,
+  scname varchar(10) NOT NULL,
+  socrname varchar(29) NOT NULL,
+  code_t_st varchar(3) NOT NULL
+) ENGINE=InnoDB DEFAULT CHARSET=utf8"
 )
